--- a/sendinblue-bundle/pom.xml
+++ b/sendinblue-bundle/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>de.intension</groupId>
@@ -7,8 +8,12 @@
   </parent>
   <artifactId>keycloak-sendinblue-bundle</artifactId>
   <packaging>ear</packaging>
-  
+
   <description>Create an EAR to deploy the extension and its dependencies in Keycloak</description>
+
+  <properties>
+    <artifactName>${artifactId}-${keycloak.version}${changelist}</artifactName>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -19,6 +24,8 @@
   </dependencies>
 
   <build>
+    <!-- Override this with -Djar.name when building the jar -->
+    <finalName>${artifactName}</finalName>
     <plugins>
       <plugin>
         <artifactId>maven-ear-plugin</artifactId>
