--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,10 +18,10 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Package maven jar
-        run: mvn clean package -DskipTests -Djar.name=sendinblue
+        run: mvn clean package -DskipTests -DartifactName=sendinblue
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
