--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,4 +31,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          context: .
           tags: intension/sendinblue-email-provider:latest
