Throw EmailException with message from sendinblue.ApiException

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: keycloak
+      SENDINBLUE_API_KEY: none
     volumes:
     - /etc/localtime:/etc/localtime:ro
+    - ./test/email-provider.cli:/opt/jboss/startup-scripts/email-provider.cli
     - "./sendinblue-bundle/target/keycloak-sendinblue-bundle-KC-${KEYCLOAK_VERSION}-docker.ear:/opt/jboss/keycloak/standalone/deployments/keycloak-sendinblue.ear"
