--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   keycloak:
     container_name: keycloak-sendinblue
-    image: "jboss/keycloak:${KEYCLOAK_VERSION}"
+    image: "quay.io/keycloak/keycloak:${KEYCLOAK_VERSION}"
     ports:
     - 18080:8080
     environment:
